--- a/CV code/CV.html
+++ b/CV code/CV.html
@@ -26,7 +26,7 @@
       <br><br><br><br><br><br>
       <br><br>
       <img
-        src="https://media.licdn.com/dms/image/D5603AQFg9eAaWCQ-7w/profile-displayphoto-shrink_400_400/0/1679336633663?e=2147483647&v=beta&t=BjIq_d8rdl24sZuX11K2F1qaw24T5Luia2G0ADr2pns"
+        src="https://i.ibb.co/6wrBJBQ/WImage-2024-03-02-at-12-57-49-AM.jpg"  
         alt="My Pic" width="300">
       <h1 style="padding:0%;"> PRINOM MOJUMDER</h1>
       <p> ENTHUSIAST FOR LEARNING COMPUTE SCIENCE & ENGINEERING</p>
@@ -58,8 +58,8 @@
         <UL>
           <DIV>
             <h3 style="color: rgb(253, 253, 191);"><b>SKILLS:</b></h3>
-            <li> Programming Language: C, C++, Java, Python, SQL, HTML, CSS, Java script, PHP.</li>
-            <li>Database.</li>
+            <li> Programming Language: C, C++, Java, Python, SQL, HTML, CSS, Java script, PHP, Cypher.</li>
+            <li>Database, Graph DB.</li>
             <li>Problem Solving (Data structure & Algorithmic problem).</li>
             <li>Application Tools: Visual Studio, Android Studio NetBeans, Oracle database, AutoCAD, MS Power BI, MS
               office (MS- word, Power-point, Excel). </li>
@@ -71,9 +71,11 @@
 
         <UL>
           <DIV>
-            <h3 style="color: rgb(253, 253, 191);"><b>EXTRA CURRICULAR ACTIVITIES:</b></h3>
-            <li>General member: East West University Computer Programming Club.</li>
-            <li>Volunteer: East West University Robotics Club.</li>
+            <h3 style="color: rgb(253, 253, 191);"><b> LEARNING:</b></h3>
+            <li>Artificial Intelligence</li>
+            <li>Machine Learning</li>
+            <li>JavaScript, PHP, Laravel</li>
+            <li>Graph DB</li>
           </DIV>
         </UL>
         <br><br><br><br><br>
